# openfx-io

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  Makefile.master  README.md  gpl-header-c.txt
.github/workflows/: ci.yml  find_and_copy_deps.py  verify_plugin_loads.cpp
EXR/: Makefile  ReadEXR.cpp  WriteEXR.cpp
FFmpeg/: FFmpegCompat.h  FFmpegFile.cpp  FFmpegFile.h  Makefile  PixelFormat.cpp  PixelFormat.h  ReadFFmpeg.cpp  TODO.txt  WriteFFmpeg.cpp
IO/: IO.vcxproj  Makefile
IO.xcodeproj/: project.pbxproj
IOSupport/: GenericOCIO.cpp  GenericOCIO.h  GenericOCIOOpenGL.cpp  GenericReader.cpp  GenericReader.h  GenericWriter.cpp  GenericWriter.h  IOUtility.h  glsl.README.txt  glsl.cpp  glsl.h
OCIO/: Makefile  OCIOCDLTransform.cpp  OCIOColorSpace.cpp  OCIODisplay.cpp  OCIOFileTransform.cpp  OCIOLogConvert.cpp  OCIOLookTransform.cpp  OCIOPluginBase.cpp  OCIOPluginBase.h
OIIO/: Makefile  OIIOGlobal.cpp  OIIOGlobal.h  OIIOResize.cpp  OIIOText.cpp  ReadOIIO.cpp  WriteOIIO.cpp
PFM/: ReadPFM.cpp  WritePFM.cpp
PNG/: Makefile  ReadPNG.cpp  WritePNG.cpp
RunScript/: RunScript.cpp  RunScript.h  pstream.h
SeExpr/: SeExpr.cpp  SeGrain.cpp  SeNoise.cpp
cmake/Modules/: FindSeExpr2.cmake
tests/: .gitignore  Makefile  README.md  ffmpeg_read_test.cpp  ofx_actions_test.cpp  ofx_entrypoints_test.cpp  ofx_render_test.cpp  ofx_stubs.cpp  run_ffmpeg_read_test.sh  run_oiio_roundtrip_test.sh  test.ocio
